Initial conversion of files to Java 1.4 standards